--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="Container">
       <div id="LeftPanel">
         <h1>Mahbub Shafin</h1>
-        <h2>Aspiring Software Developer</h2>
+        <h2>Software Developer</h2>
         <p>
           Computer Science student passionate about full-stack development,
           embedded engineering, AI, creative problem solving, and building
