--- a/index.html
+++ b/index.html
@@ -128,19 +128,49 @@
                   Bey Bazaar
                 </p>
                 <p>
-                   Full-stack e-commerce web app built with Next.js, TypeScript,
-              Supabase, and Tailwind CSS. Features include user authentication,
-              dynamic product catalog, real-time cart management, and order
-              tracking. Optimized for SEO and performance with SSR, lazy
-              loading, and CI/CD deployment on Vercel. Achieved ~100K views and
-              $200+ in sales within the first month.
+                  Full-stack e-commerce web app built with Next.js, TypeScript,
+                  Supabase, and Tailwind CSS. Features include user
+                  authentication, dynamic product catalog, real-time cart
+                  management, and order tracking. Optimized for SEO and
+                  performance with SSR, lazy loading, and CI/CD deployment on
+                  Vercel. Achieved ~100K views and $200+ in sales within the
+                  first month.
                 </p>
                 <div class="Separator"></div>
                 <p>2025</p>
               </div>
             </div>
           </a>
-
+          <a
+            href="https://mahbub87.github.io/portfolio/"
+            target="_blank"
+            class="Project"
+          >
+            <div class="ProjectContent">
+              <img
+                src="Images/portfolio.png"
+                alt="portfolio image"
+                class="ProjectImage"
+              />
+              <div class="ProjectText">
+                <p
+                  data-value="Portfolio"
+                  style="color: white; font-weight: bold"
+                >
+                  Portfolio
+                </p>
+                <p>
+                  For this personal website, I created a clean, interactive, and
+                  engaging portfolio showcasing my work as a software developer.
+                  This project was built from scratch using pure HTML, CSS, and
+                  JavaScript to emphasize my front-end development skills and
+                  attention to detail in user experience design.
+                </p>
+                <div class="Separator"></div>
+                <p>2025</p>
+              </div>
+            </div>
+          </a>
           <a
             href="https://github.com/mahbub87/Ecommerce-Store"
             target="_blank"
@@ -160,11 +190,11 @@
                   E-commerce Platform
                 </p>
                 <p>
-                  Scalable e-commerce platform using React, Spring Boot, MongoDB,
-              and Docker. Includes RESTful APIs, user authentication, admin
-              dashboard, and real-time product filtering. Built with modular
-              architecture for maintainability and deployed via Docker for
-              cross-environment portability.
+                  Scalable e-commerce platform using React, Spring Boot,
+                  MongoDB, and Docker. Includes RESTful APIs, user
+                  authentication, admin dashboard, and real-time product
+                  filtering. Built with modular architecture for maintainability
+                  and deployed via Docker for cross-environment portability.
                 </p>
                 <div class="Separator"></div>
                 <p>2025</p>
@@ -192,10 +222,10 @@
                 </p>
                 <p>
                   Interactive pathfinding visualizer built with Flask and Canvas
-              API. Showcases algorithms like Dijkstra, A*, BFS, and DFS through
-              animated graph traversal. Features dynamic edge highlighting and
-              city-based node systems to enhance algorithm comprehension and
-              visualization.
+                  API. Showcases algorithms like Dijkstra, A*, BFS, and DFS
+                  through animated graph traversal. Features dynamic edge
+                  highlighting and city-based node systems to enhance algorithm
+                  comprehension and visualization.
                 </p>
                 <div class="Separator"></div>
                 <p>2025</p>
@@ -219,11 +249,11 @@
                   YeezyDB
                 </p>
                 <p>
-                   Responsive sneaker catalog web app featuring Kanye West’s Yeezy
-              line, built with Flask, PostgreSQL, and vanilla JS. Includes a
-              custom Python scraper to auto-populate the database with
-              up-to-date sneaker info from public sources. Designed for clean UI
-              and fast querying.
+                  Responsive sneaker catalog web app featuring Kanye West’s
+                  Yeezy line, built with Flask, PostgreSQL, and vanilla JS.
+                  Includes a custom Python scraper to auto-populate the database
+                  with up-to-date sneaker info from public sources. Designed for
+                  clean UI and fast querying.
                 </p>
                 <div class="Separator"></div>
                 <p>2024</p>
@@ -250,14 +280,14 @@
                   VHDL-CPU
                 </p>
                 <p>
-                   This project involves the design and implementation of a Simple
-              Central Processing Unit (CPU) in VHDL for deployment on an FPGA
-              board. The CPU is built with an Arithmetic Logic Unit (ALU) and a
-              Control Unit to process and manage data operations. The system
-              also integrates eight 8-bit registers, a finite state machine
-              (FSM), and a 3x8 decoder to handle instruction processing.
-              Additionally, user interaction is facilitated by a seven-segment
-              display.
+                  This project involves the design and implementation of a
+                  Simple Central Processing Unit (CPU) in VHDL for deployment on
+                  an FPGA board. The CPU is built with an Arithmetic Logic Unit
+                  (ALU) and a Control Unit to process and manage data
+                  operations. The system also integrates eight 8-bit registers,
+                  a finite state machine (FSM), and a 3x8 decoder to handle
+                  instruction processing. Additionally, user interaction is
+                  facilitated by a seven-segment display.
                 </p>
                 <div class="Separator"></div>
                 <p>2024</p>
@@ -284,14 +314,15 @@
                   HCS12 Morse-Code-Flasher
                 </p>
                 <p>
-                   This project demonstrates a basic application of the HCS12
-              microcontroller (MCU), utilizing peripherals such as a keypad,
-              7-segment display, and an LCD to interact with Morse code input
-              and output. The core functionality is the translation of user
-              input, specifically the letter “A” on the keypad, into its
-              corresponding Morse code sequence. The project includes both
-              hardware-level and software-level features, with real-time
-              interrupts (RTI) and key debounce mechanisms for smooth operation.
+                  This project demonstrates a basic application of the HCS12
+                  microcontroller (MCU), utilizing peripherals such as a keypad,
+                  7-segment display, and an LCD to interact with Morse code
+                  input and output. The core functionality is the translation of
+                  user input, specifically the letter “A” on the keypad, into
+                  its corresponding Morse code sequence. The project includes
+                  both hardware-level and software-level features, with
+                  real-time interrupts (RTI) and key debounce mechanisms for
+                  smooth operation.
                 </p>
                 <div class="Separator"></div>
                 <p>2024</p>
