--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Software Developer</h2>
         <p>
           Computer Science student passionate about full-stack development,
-          embedded engineering, AI, creative problem solving, and building
+          embedded engineering, AI, Cyber Security, creative problem solving, and building
           scalable, impactful products.
         </p>
 
