--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </p>
           <p>
             In my spare time, I'm usually hanging out with my wonderful
-            girlfriend ❤️, coding 🧑‍💻, gaming 🎮, planning future car mods 🏎️, or
+            wife ❤️, coding 🧑‍💻, gaming 🎮, planning future car mods 🏎️, or
             making Beyblade videos on TikTok!
           </p>
         </div>
