--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2>Software Developer</h2>
         <p>
           Computer Science student passionate about full-stack development,
-          embedded engineering, AI, Cyber Security, creative problem solving, and building
-          scalable, impactful products.
+          embedded engineering, AI, Cyber Security, creative problem solving,
+          and building scalable, impactful products.
         </p>
 
         <nav class="NavContainer">
@@ -104,13 +104,49 @@
             importance of user-centric design.
           </p>
           <p>
-            In my spare time, I'm usually hanging out with my wonderful
-            wife ❤️, coding 🧑‍💻, gaming 🎮, planning future car mods 🏎️, or
-            making Beyblade videos on TikTok!
+            In my spare time, I'm usually coding 🧑‍💻, gaming 🎮, planning future
+            car mods 🏎️, or making Beyblade videos on TikTok!
           </p>
         </div>
 
         <div id="Section2" class="Section">
+          <a
+            href="https://github.com/mahbub87/pocket_nur"
+            target="_blank"
+            class="Project"
+          >
+            <div class="ProjectContent">
+              <img
+                src="Images/PocketNur.png"
+                alt="Pocket Nur Image"
+                class="ProjectImage"
+              />
+              <div class="ProjectText">
+                <p
+                  data-value="Pocker Nur"
+                  style="color: white; font-weight: bold"
+                >
+                  Pocket Nur
+                </p>
+                <p>2025</p>
+                <p>
+                  Developed a modular Flutter application with clean
+                  architecture, using decoupled controllers, services, and UI
+                  for scalability. Built a GPT-4-powered Islamic Q&A chatbot
+                  using Retrieval-Augmented Generation (RAG) by integrating
+                  Firestore with OpenAI through a custom FastAPI/Node.js
+                  backend. Improved semantic search capabilities by integrating
+                  Pinecone vector search with OpenAI Embeddings for document
+                  retrieval from Firestore. Automated the ingestion and
+                  structuring of Quran and Hadith content using JavaScript
+                  scripts. Implemented location-aware prayer times, Hijri date
+                  conversion, and dynamic Quran audio streaming to enhance app
+                  functionality.
+                </p>
+                <div class="Separator"></div>
+              </div>
+            </div>
+          </a>
           <a
             href="https://bey-bazaar.vercel.app"
             target="_blank"
@@ -129,6 +165,7 @@
                 >
                   Bey Bazaar
                 </p>
+                <p>2025</p>
                 <p>
                   Full-stack e-commerce web app built with Next.js, TypeScript,
                   Supabase, and Tailwind CSS. Features include user
@@ -139,7 +176,6 @@
                   first month.
                 </p>
                 <div class="Separator"></div>
-                <p>2025</p>
               </div>
             </div>
           </a>
@@ -159,8 +195,9 @@
                   data-value="Portfolio"
                   style="color: white; font-weight: bold"
                 >
-                  Portfolio
+                  Portfolio Website
                 </p>
+                <p>2025</p>
                 <p>
                   For this personal website, I created a clean, interactive, and
                   engaging portfolio showcasing my work as a software developer.
@@ -169,7 +206,6 @@
                   attention to detail in user experience design.
                 </p>
                 <div class="Separator"></div>
-                <p>2025</p>
               </div>
             </div>
           </a>
@@ -191,6 +227,7 @@
                 >
                   E-commerce Platform
                 </p>
+                <p>2025</p>
                 <p>
                   Scalable e-commerce platform using React, Spring Boot,
                   MongoDB, and Docker. Includes RESTful APIs, user
@@ -199,7 +236,6 @@
                   and deployed via Docker for cross-environment portability.
                 </p>
                 <div class="Separator"></div>
-                <p>2025</p>
               </div>
             </div>
           </a>
@@ -222,6 +258,7 @@
                 >
                   Map Flow
                 </p>
+                <p>2025</p>
                 <p>
                   Interactive pathfinding visualizer built with Flask and Canvas
                   API. Showcases algorithms like Dijkstra, A*, BFS, and DFS
@@ -230,7 +267,6 @@
                   comprehension and visualization.
                 </p>
                 <div class="Separator"></div>
-                <p>2025</p>
               </div>
             </div>
           </a>
@@ -250,6 +286,8 @@
                 <p data-value="YeezyDB" style="color: white; font-weight: bold">
                   YeezyDB
                 </p>
+                <p>2024</p>
+
                 <p>
                   Responsive sneaker catalog web app featuring Kanye West’s
                   Yeezy line, built with Flask, PostgreSQL, and vanilla JS.
@@ -258,7 +296,6 @@
                   clean UI and fast querying.
                 </p>
                 <div class="Separator"></div>
-                <p>2024</p>
               </div>
             </div>
           </a>
@@ -281,6 +318,8 @@
                 >
                   VHDL-CPU
                 </p>
+                <p>2024</p>
+
                 <p>
                   This project involves the design and implementation of a
                   Simple Central Processing Unit (CPU) in VHDL for deployment on
@@ -292,7 +331,6 @@
                   facilitated by a seven-segment display.
                 </p>
                 <div class="Separator"></div>
-                <p>2024</p>
               </div>
             </div>
           </a>
@@ -315,6 +353,8 @@
                 >
                   HCS12 Morse-Code-Flasher
                 </p>
+                <p>2024</p>
+
                 <p>
                   This project demonstrates a basic application of the HCS12
                   microcontroller (MCU), utilizing peripherals such as a keypad,
@@ -327,13 +367,30 @@
                   smooth operation.
                 </p>
                 <div class="Separator"></div>
-                <p>2024</p>
               </div>
             </div>
           </a>
         </div>
 
         <div id="Section3" class="Section">
+          <p>
+            <strong>Mobile Developer | Volunteer</strong> — Masjid Sirat Al
+            Mustaqim<br />
+            Jun 2025 – Present<br />
+            As a volunteer Mobile Developer at Masjid Siratul Mustaqim, I helped
+            towards raising $3M for a new mosque by building a modular Flutter
+            app that offers a rich suite of Islamic features including Quran,
+            Hadith, Duas, and location-aware prayer times. I implemented a
+            GPT-4-powered Islamic Q&A chatbot using Retrieval-Augmented
+            Generation (RAG), combining Firestore data with OpenAI via a custom
+            FastAPI/Node.js backend. To improve search accuracy, I integrated
+            Pinecone vector search with OpenAI Embeddings for semantic
+            retrieval. I also automated the ingestion of Quranic and Hadith
+            texts using JavaScript, and enhanced user engagement with services
+            like Hijri date conversion and Quran audio streaming. The app
+            follows clean architecture principles, ensuring scalability and
+            separation of concerns.
+          </p>
           <p>
             <strong>Founder | Full-Stack Developer</strong> — Bey Bazaar<br />
             Feb 2025 – Present<br />
