--- a/index.html
+++ b/index.html
@@ -241,16 +241,23 @@
           </a>
 
           <a
-            href="https://mapflow.onrender.com"
+            href="https://map-flow.vercel.app/"
             target="_blank"
             class="Project"
           >
             <div class="ProjectContent">
-              <img
-                src="Images/mapflow.png"
-                alt="Map Flow Image"
+              <video
                 class="ProjectImage"
-              />
+                autoplay
+                loop
+                muted
+                playsinline
+                preload="metadata"
+                poster="Images/mapflow.png"
+              >
+                <source src="Images/Recording%202025-08-12%20234322.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
               <div class="ProjectText">
                 <p
                   data-value="Map Flow"
