--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               style="width: 30px; height: 30px"
             />
           </a>
-          <a href="MahbubShafin_Dev_Resume.pdf" target="_blank" title="Resume">
+          <a href="Mahbub_Shafin_Developer_Resume.pdf" target="_blank" title="Resume">
             <img
               src="Images/CVIcon.png"
               alt="Resume"
