--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
               style="width: 30px; height: 30px"
             />
           </a>
-          <a href="Mahbub_Shafin_Developer_Resume.pdf" target="_blank" title="Resume">
+          <a
+            href="Mahbub_Shafin_Developer_Resume.pdf"
+            target="_blank"
+            title="Resume"
+          >
             <img
               src="Images/CVIcon.png"
               alt="Resume"
@@ -254,7 +258,10 @@
                 preload="metadata"
                 poster="Images/mapflow.png"
               >
-                <source src="Images/Recording%202025-08-12%20234322.mp4" type="video/mp4" />
+                <source
+                  src="Images/Recording%202025-08-12%20234322.mp4"
+                  type="video/mp4"
+                />
                 Your browser does not support the video tag.
               </video>
               <div class="ProjectText">
@@ -266,11 +273,16 @@
                 </p>
                 <p>2025</p>
                 <p>
-                  Interactive pathfinding visualizer built with Flask and Canvas
-                  API. Showcases algorithms like Dijkstra, A*, BFS, and DFS
-                  through animated graph traversal. Features dynamic edge
-                  highlighting and city-based node systems to enhance algorithm
-                  comprehension and visualization.
+                  A web app that visualizes pathfinding on real city graphs with
+                  smooth, animated exploration and final-path highlights. The
+                  backend is a Python/Flask API that computes Dijkstra, A*, BFS,
+                  DFS, and bidirectional search, returning a compact JSON
+                  payload with the path and visit order. The frontend uses HTML5
+                  Canvas with offscreen caching, precomputed node positions, and
+                  requestAnimationFrame to render neon-style glows and fast
+                  interactions on large maps. Performance is optimized with
+                  path‑only responses, gzip via Flask‑Compress, and a stateless
+                  design suited for serverless deployment on Vercel.
                 </p>
                 <div class="Separator"></div>
               </div>
