--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahbub Shafin - Personal Site</title>
     <link rel="icon" type="image/png" href="Images/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -40,7 +42,7 @@
 
         <div id="SocialsContainer">
           <a href="https://github.com/mahbub87" target="_blank" title="GitHub">
-            <img
+            <img loading="lazy"
               src="Images/GithubIcon.png"
               alt="GitHub"
               style="width: 30px; height: 30px"
@@ -51,7 +53,7 @@
             target="_blank"
             title="Email"
           >
-            <img
+            <img loading="lazy"
               src="Images/EmailIcon.png"
               alt="Email"
               style="width: 30px; height: 30px"
@@ -62,7 +64,7 @@
             target="_blank"
             title="Resume"
           >
-            <img
+            <img loading="lazy"
               src="Images/CVIcon.png"
               alt="Resume"
               style="width: 30px; height: 30px"
@@ -73,7 +75,7 @@
             target="_blank"
             title="LinkedIn"
           >
-            <img
+            <img loading="lazy"
               src="Images/LinkedinIcon.png"
               alt="LinkedIn"
               style="width: 30px; height: 30px"
@@ -119,7 +121,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/PocketNur.png"
                 alt="Pocket Nur Image"
                 class="ProjectImage"
@@ -156,7 +158,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/beybazaar.png"
                 alt="Bey Bazaar Image"
                 class="ProjectImage"
@@ -188,7 +190,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/portfolio.png"
                 alt="portfolio image"
                 class="ProjectImage"
@@ -218,7 +220,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/ecommerce.png"
                 alt="E-commerce Platform Image"
                 class="ProjectImage"
@@ -295,7 +297,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/yeezydb.png"
                 alt="YeezyDB Image"
                 class="ProjectImage"
@@ -324,7 +326,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/vhdl.png"
                 alt="VHDL-CPU Image"
                 class="ProjectImage"
@@ -359,7 +361,7 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img
+              <img loading="lazy"
                 src="Images/hcs123.png"
                 alt="Morse Code Flasher Image"
                 class="ProjectImage"
@@ -437,6 +439,6 @@
         </p>
       </div>
     </div>
-    <script src="script.js"></script>
+  <script src="script.js" defer></script>
   </body>
 </html>
