--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahbub Shafin - Personal Site</title>
     <link rel="icon" type="image/png" href="Images/favicon.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <canvas id="ParticleCanvas"></canvas>
-    <div id="Container">
+  <div id="Container">
       <div id="LeftPanel">
         <h1>Mahbub Shafin</h1>
         <h2>Software Developer</h2>
@@ -42,7 +39,7 @@
 
         <div id="SocialsContainer">
           <a href="https://github.com/mahbub87" target="_blank" title="GitHub">
-            <img loading="lazy"
+            <img
               src="Images/GithubIcon.png"
               alt="GitHub"
               style="width: 30px; height: 30px"
@@ -53,7 +50,7 @@
             target="_blank"
             title="Email"
           >
-            <img loading="lazy"
+            <img
               src="Images/EmailIcon.png"
               alt="Email"
               style="width: 30px; height: 30px"
@@ -64,7 +61,7 @@
             target="_blank"
             title="Resume"
           >
-            <img loading="lazy"
+            <img
               src="Images/CVIcon.png"
               alt="Resume"
               style="width: 30px; height: 30px"
@@ -75,7 +72,7 @@
             target="_blank"
             title="LinkedIn"
           >
-            <img loading="lazy"
+            <img
               src="Images/LinkedinIcon.png"
               alt="LinkedIn"
               style="width: 30px; height: 30px"
@@ -121,16 +118,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/PocketNur.png"
                 alt="Pocket Nur Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="Pocker Nur"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="Pocker Nur" style="font-weight: bold">
                   Pocket Nur
                 </p>
                 <p>2025</p>
@@ -158,16 +152,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/beybazaar.png"
                 alt="Bey Bazaar Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="Bey Bazaar"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="Bey Bazaar" style="font-weight: bold">
                   Bey Bazaar
                 </p>
                 <p>2025</p>
@@ -190,16 +181,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/portfolio.png"
                 alt="portfolio image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="Portfolio"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="Portfolio" style="font-weight: bold">
                   Portfolio Website
                 </p>
                 <p>2025</p>
@@ -220,16 +208,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/ecommerce.png"
                 alt="E-commerce Platform Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="E-commerce Platform"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="E-commerce Platform" style="font-weight: bold">
                   E-commerce Platform
                 </p>
                 <p>2025</p>
@@ -267,10 +252,7 @@
                 Your browser does not support the video tag.
               </video>
               <div class="ProjectText">
-                <p
-                  data-value="Map Flow"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="Map Flow" style="font-weight: bold">
                   Map Flow
                 </p>
                 <p>2025</p>
@@ -297,13 +279,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/yeezydb.png"
                 alt="YeezyDB Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p data-value="YeezyDB" style="color: white; font-weight: bold">
+                <p data-value="YeezyDB" style="font-weight: bold">
                   YeezyDB
                 </p>
                 <p>2024</p>
@@ -326,16 +308,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/vhdl.png"
                 alt="VHDL-CPU Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="VHDL-CPU"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="VHDL-CPU" style="font-weight: bold">
                   VHDL-CPU
                 </p>
                 <p>2024</p>
@@ -361,16 +340,13 @@
             class="Project"
           >
             <div class="ProjectContent">
-              <img loading="lazy"
+              <img
                 src="Images/hcs123.png"
                 alt="Morse Code Flasher Image"
                 class="ProjectImage"
               />
               <div class="ProjectText">
-                <p
-                  data-value="HCS12 Morse-Code-Flasher"
-                  style="color: white; font-weight: bold"
-                >
+                <p data-value="HCS12 Morse-Code-Flasher" style="font-weight: bold">
                   HCS12 Morse-Code-Flasher
                 </p>
                 <p>2024</p>
@@ -438,7 +414,8 @@
           with pure <m>HTML</m>, <m>CSS</m>, and <m>JavaScript</m>.
         </p>
       </div>
-    </div>
-  <script src="script.js" defer></script>
+  </div>
+  <script src="particles.js?v=2"></script>
+  <script src="script.js"></script>
   </body>
 </html>
